update Task Complete

--- a/Regi.html
+++ b/Regi.html
@@ -24,19 +24,13 @@
             <form action="" id="frm">
                 <h3>Sign Up</h3>
                 
-                <!-- <label for="title">Please Select Mr/Mrs/Miss :-</label>
+                <label for="title">Please Select Mr/Mrs/Miss :-</label>
                 <select name="title" id="title">
                     <option value="Mr">Mr</option>
                     <option value="Miss">Miss</option>
                     <option value="Mrs">Mrs</option>
-                </select> -->
+                </select>
 
-                <div>
-                    <label for="title">Please Select Mr/Mrs/Miss :-</label>
-                    <input type="text" name="title" id="title"  placeholder="Please Select Mr/Mrs/Miss" required />
-                    <b><span class="formerror"></span></b>
-
-                </div>
                 <div>
                     <label for="firstname">Enter Your Name :-</label>
                     <input type="text" name="firstName" id="firstName"  placeholder="Enter Your Name" required />
