--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </div>
     </div>
     <section class="image">
-        <img src="img/240_F_367357209_BG07SVnnB4HSHSaMiHajfZhrZZAE859A.jpg" alt="">
+        <div class="container">
+        <img src="https://freepngimg.com/thumb/welcome/26893-3-welcome-free-download.png" alt="">
+        </div>
     </section>
 </body>
 <script src="script.js"></script>
