--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div class="header">
         <div class="container">
             <nav>
+                <div class="logo">
+                    <a href="index.html"><img src="img/logo.png" alt="" class="icon"></a>
+                </div>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Regi.html">Registration</a></li>
