--- a/login.html
+++ b/login.html
@@ -11,6 +11,10 @@
     <div class="header">
         <div class="container">
             <nav>
+                <div class="logo">
+                    <a href="index.html"><img src="img/logo.png" alt="" class="icon"></a>
+                </div>
+
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Regi.html">Registration</a></li>
@@ -21,17 +25,15 @@
         </div>
     </div>
     <div class="container">
-        <div id="login">
+        <div class="form">
             <form id="frm">
-                <h3>Login</h3>
+                <h2>Login</h2>
                 <div>
-                    <label for="email">Enter a Email-ID</label>
-                    <input type="text" value="" name="email" id="email"  required/>
+                    <input type="text" value="" name="email" id="email" placeholder="Enter a Email-ID" required/>
                 <b><span class="formerror"></span></b>
                 </div>
                 <div>
-                    <label for="password">Enter a Passord</label>
-                    <input type="password" name="password" id="password" />
+                    <input type="password" name="password" id="password" placeholder="Enter a Passord" />
                 <b><span class="formerror"></span></b>
                 </div>
                 <div class="forgotten">
