--- a/Regi.html
+++ b/Regi.html
@@ -11,6 +11,10 @@
     <div class="header">
         <div class="container">
             <nav>
+                <div class="logo">
+                    <a href="index.html"><img src="img/logo.png" alt="" class="icon"></a>
+                </div>
+
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Regi.html">Registration</a></li>
@@ -20,11 +24,10 @@
         </div>
     </div>
     <div class="container">
-        <div id="regi">
+        <div class="form">
             <form action="" id="frm">
-                <h3>Sign Up</h3>
+                <h2>Sign Up</h2>
                 
-                <label for="title">Please Select Mr/Mrs/Miss :-</label>
                 <select name="title" id="title">
                     <option value="Mr">Mr</option>
                     <option value="Miss">Miss</option>
@@ -32,29 +35,24 @@
                 </select>
 
                 <div>
-                    <label for="firstname">Enter Your Name :-</label>
                     <input type="text" name="firstName" id="firstName"  placeholder="Enter Your Name" required />
                     <b><span class="formerror"></span></b>
 
                 </div>
                 
                 <div>
-                    <label for="lastName">Enter Your Last Name :-</label>
                     <input type="text" name="lastName" id="lastName" placeholder="Enter Your Last Name" required />
                     <b><span class="formerror"></span></b>
                 </div>
                 <div>
-                    <label for="email">Enter Your Email :-</label>
                     <input type="email" name="email" id="email" placeholder="Enter Your email" required />
                     <b><span class="formerror"></span></b>
                 </div>
                 <div>
-                    <label for="password">Enter Your Password:-</label>
                     <input type="password" name="password" id="password" placeholder="Enter Your Password" required />
                     <b><span class="formerror"></span></b>
                 </div>
                 <div>
-                    <label for="confirmPassword">Enter Your Con Password :-</label>
                     <input type="password" name="confirmPassword" id="confirmPassword"
                         placeholder="Enter Your confirmPassword" required />
                     <b><span class="formerror"></span></b>
