--- a/Dashbord.html
+++ b/Dashbord.html
@@ -68,7 +68,7 @@
        
                
             </form>
-            <a href=""><input type="submit" value="Update" onclick="updateData()" /></a>
+            <input type="submit" value="Update" onclick="updateData()" />
         </div>
 
 </body>
